<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onBording.IntroActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/skip"
        android:fontFamily="@font/cairo_bold"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/introViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introViewPager"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/cairo_bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:id="@+id/dots"
            android:gravity="center"/>

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@drawable/next"
            android:textColor="@color/white"
            android:text="@string/next"
            android:textSize="20sp"
            android:fontFamily="@font/cairo_bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>